syntax = "proto3";

option go_package = "atypicaldev.com/conversation/api/v1/notes";

package notes.v1.api;

service NotesService {
  rpc GetNotes(GetNotesRequest) returns (GetNotesResponse) {}

  rpc GetNote(GetNoteRequest) returns (GetNoteResponse) {}

  rpc GetConversation(GetConversationRequest) returns (GetConversationResponse) {}

  rpc ListConversations(ListConversationsRequest) returns (ListConversationsResponse) {}

  rpc CreateNote(CreateNoteRequest) returns (CreateNoteResponse) {}
  
  rpc CreateConversation(CreateConversationRequest) returns (CreateConversationResponse) {}
}

message CreateConversationRequest {
  string title = 1;
}

message CreateConversationResponse {
  Conversation conversation = 1;
}

message GetNoteRequest {
  string note_id = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message GetNotesRequest {}

message GetNotesResponse {
  repeated Note notes = 1;
}

message Note {
  // Required. Id of the note.
  string id = 1;

  // Required. Id of the note's conversation.
  string conversation_id = 2;

  // If populated, the parent this note is a child of
  string parent = 3;

  // Required. The content of the note
  string content = 4;

  string reply = 5;

  repeated Note children = 6;
}

message GetConversationRequest {
  string conversation_id = 1;
}

message GetConversationResponse {
  // Required. The conversation for a given convo_id.
  Conversation conversation = 1;
}

message Conversation {
  // Required.  
  string id = 1;

  // Top level list of notes in a conversation
  repeated Note notes = 2;

  string title = 3;
}

message ListConversationsRequest {}

message ListConversationsResponse {
  repeated Conversation conversations = 1;
}

message CreateNoteRequest {
  string conversation_id = 1;

  string content = 2;
  
  string reply = 3;
}

message CreateNoteResponse {
  Note note = 1;
}